<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gohibo.album.LoginActivity"
    android:background="@android:color/holo_red_light">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ToolbarColoredBackArrow"
        app:popupTheme="@style/ToolbarColoredBackArrow"
        android:background="@android:color/holo_red_light"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbarLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:title="@string/login"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        android:title="@string/login"/>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:weightSum="1">

            <ImageView android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="100dp" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:text="@string/login"
                android:background="@android:color/holo_red_dark" />

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/reg_desc"
                android:gravity="center"
                android:textSize="16sp"/>
            <TextView android:id="@+id/link_reset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/reset_pass_desc"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
