<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gohibo.album.CameraActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCamAct"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:title="@string/select"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/select" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabsCam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:tabGravity="fill"
            app:tabMode="fixed">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/cam_frame_container"
        android:layout_width="287dp"
        android:layout_height="274dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar">

    </FrameLayout>


</RelativeLayout>
