<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.gohibo.album.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/edit_profile"
        app:title="@string/edit_profile"
        android:id="@+id/toolbar_edit_profile" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/edit_profile_image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="text"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_desc_edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:layout_gravity="top|start"
                android:gravity="top|start"
                android:maxLines="9"
                android:lines="4"
                android:hint="@string/bio" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_website_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:hint="@string/website" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:hintAnimationEnabled="true"
            app:hintTextAppearance="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_current_city_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:hint="@string/current_city" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>
